@@ -1,5 +1,8 @@
 /*
  * $Log: mkpasswd.c,v $
+ * Revision 1.7  2024-05-17 16:12:36+05:30  Cprogrammer
+ * fix discarded-qualifier-warnings
+ *
  * Revision 1.6  2024-05-09 23:46:19+05:30  mbhangui
  * fix discarded-qualifier compiler warnings
  *
@@ -48,7 +51,7 @@ die_nomem()
 
 /* encrypt a password */
 int
-mkpasswd(char *newpasswd, stralloc *crypted, int encrypt_flag)
+mkpasswd(const char *newpasswd, stralloc *crypted, int encrypt_flag)
 {
 	char           *tmpstr;
 	static stralloc salt = {0};
@@ -63,7 +66,7 @@ mkpasswd(char *newpasswd, stralloc *crypted, int encrypt_flag)
 		if (!(tmpstr = in_crypt(newpasswd, salt.s)))
 			return (-1);
 	} else
-		tmpstr = newpasswd;
+		tmpstr = (char *) newpasswd;
 	if (!stralloc_copys(crypted, tmpstr) || !stralloc_0(crypted))
 		die_nomem();
 	crypted->len--;
@@ -73,7 +76,7 @@ mkpasswd(char *newpasswd, stralloc *crypted, int encrypt_flag)
 void
 getversion_mkpasswd_c()
 {
-	const char     *x = "$Id: mkpasswd.c,v 1.6 2024-05-09 23:46:19+05:30 mbhangui Exp mbhangui $";
+	const char     *x = "$Id: mkpasswd.c,v 1.7 2024-05-17 16:12:36+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
