@@ -1,5 +1,8 @@
 /*
  * $Log: qdirname.h,v $
+ * Revision 1.2  2024-05-17 16:13:06+05:30  Cprogrammer
+ * fix discarded-qualifier-warnings
+ *
  * Revision 1.1  2022-05-10 19:49:11+05:30  Cprogrammer
  * Initial revision
  *
@@ -7,6 +10,6 @@
 #ifndef QDIRNAME_H
 #define QDIRNAME_H
 
-char    *qdirname(char *);
+char    *qdirname(const char *);
 
 #endif
